2017-08-25  Karen   <cerebrum@cleomedes.uit.no>

    * Email.py: Had to make our own version of Cerebrum.modules.Email.py because of a 
    missing 'create_date' in EmailAddress.write_db(). This will hopefully be corrected 
    by UiO in a later version of Cerebrum.modules.Email.py.
